--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,12 @@
             <version>3.9.0</version>
             <scope>test</scope>
         </dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.12.3</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
