Fix Validation exceptions

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.Strin
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 
 messaging.kafka.topic=employee-topic
+
+server.error.include-binding-errors=always
+server.error.include-message=always
