--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,6 @@ messaging.kafka.topic=employee-topic
 
 server.error.include-binding-errors=always
 server.error.include-message=always
+
+spring.security.user.name=user
+spring.security.user.password=password
