added Testing for Kafka

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,10 +8,8 @@ spring.jpa.show-sql=true
 
 # Kafka Configuration
 spring.kafka.bootstrap-servers=localhost:29092
-spring.kafka.consumer.group-id=employee
+spring.kafka.consumer.group-id=employee-group
 spring.kafka.consumer.auto-offset-reset=earliest
-spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 
 messaging.kafka.topic=employee-topic
 
